--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 edition = "2021"
 name = "lo_"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Saddam H <thedevsaddam@gmail.com>"]
 description = "A modern Rust utility library delivering modularity, performance & extras proted from JavaScript Lodash"
-readme = "README.md"
 repository = "https://github.com/thedevsaddam/lo_"
 license = "MIT"
+keywords = ["lodash", "js", "utility", "rust", "rust-lodash"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1.10.2"
