fix: typo in description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ edition = "2021"
 name = "lo_"
 version = "0.1.8"
 authors = ["Saddam H <thedevsaddam@gmail.com>"]
-description = "A modern Rust utility library delivering modularity, performance & extras proted from JavaScript Lodash"
+description = "A modern Rust utility library delivering modularity, performance & extras ported from JavaScript Lodash"
 repository = "https://github.com/thedevsaddam/lo_"
 homepage = "https://github.com/thedevsaddam/lo_"
 documentation = "https://docs.rs/lo_"
