--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "lo_"
-version = "0.1.8"
+version = "0.1.9"
 authors = ["Saddam H <thedevsaddam@gmail.com>"]
 description = "A modern Rust utility library delivering modularity, performance & extras ported from JavaScript Lodash"
 repository = "https://github.com/thedevsaddam/lo_"
@@ -14,7 +14,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["array", "string"]
+default = ["array", "string", "condition"]
 
 array = ["chunk", "contains", "difference", "find", "intersection", "uniq", "without"]
 chunk =[]
@@ -36,7 +36,7 @@ upper_first = []
 words = ["regex"]
 template = []
 
-
+condition = []
 
 
 [dependencies]
