--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "lo_"
-version = "0.1.10"
+version = "0.2.0"
 authors = ["Saddam H <thedevsaddam@gmail.com>"]
 description = "A modern Rust utility library delivering modularity, performance & extras ported from JavaScript Lodash"
 repository = "https://github.com/thedevsaddam/lo_"
@@ -11,22 +11,27 @@ keywords = ["lodash", "js", "javascript", "utility", "rust-lodash"]
 readme = "README.md"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [features]
-default = ["array", "string", "condition"]
+default = ["collection", "string", "general"]
 
-array = ["chunk", "contains", "difference", "find", "intersection", "uniq", "without"]
-chunk =[]
-contains =[]
-difference =[]
+# Collection utilities
+collection = ["chunk", "contains", "difference", "find", "intersection", "uniq", "without", "omit_keys", "pick_keys", "drop", "drop_right", "zip_with"]
+chunk = []
+contains = []
+difference = []
 find = []
-intersection =[]
-uniq =[]
-without =[]
+intersection = []
+uniq = []
+without = []
+omit_keys = []
+pick_keys = []
+drop = []
+drop_right = []
+zip_with = []
+transform = []
 
-
-string = ["camel_case", "capitalize", "ends_with", "lower_first", "starts_with", "upper_first", "words", "template"]
+# String utilities
+string = ["camel_case", "capitalize", "ends_with", "lower_first", "starts_with", "upper_first", "words", "template", "slugify", "truncate_middle", "safe_parse"]
 camel_case = []
 capitalize = []
 ends_with = []
@@ -35,9 +40,23 @@ starts_with = []
 upper_first = []
 words = ["regex"]
 template = []
+slugify = []
+truncate_middle = []
+safe_parse = []
 
-condition = []
+# General utilities
+general = ["tap", "retry", "ternary", "ternary_f"]
+tap = []
+retry = []
+ternary = []
+ternary_f = []
 
+# Async retry (behind feature flag)
+async_retry = ["tokio"]
 
 [dependencies]
 regex = { version = "1.10.2", optional = true }
+tokio = { version = "1.37", optional = true, features = ["time", "macros", "rt"] }
+
+[package.metadata.docs.rs]
+features = ["async_retry", "transform"]
