--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "lo_"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Saddam H <thedevsaddam@gmail.com>"]
 description = "A modern Rust utility library delivering modularity, performance & extras ported from JavaScript Lodash"
 repository = "https://github.com/thedevsaddam/lo_"
@@ -33,10 +33,12 @@ assign = []
 subset = []
 
 # String utilities
-string = ["camel_case", "title_case", "snake_case", "capitalize", "ends_with", "lower_first", "starts_with", "upper_first", "words", "template", "slugify", "truncate_middle", "safe_parse", "str_split", "str_pad", "str_rev", "wordwrap"]
+string = ["camel_case", "title_case", "kebab_case", "snake_case", "screaming_snake_case", "capitalize", "ends_with", "lower_first", "starts_with", "upper_first", "words", "template", "slugify", "truncate_middle", "safe_parse", "str_split", "str_pad", "str_rev", "wordwrap"]
 camel_case = []
 title_case = []
+kebab_case = []
 snake_case = []
+screaming_snake_case = []
 capitalize = []
 ends_with = []
 lower_first = []
@@ -65,6 +67,8 @@ async_retry = ["tokio"]
 [dependencies]
 regex = { version = "1.10.2", optional = true }
 tokio = { version = "1.37", optional = true, features = ["time", "macros", "rt"] }
+unicode-normalization = "0.1"
+unicode-general-category = "0.3"
 
 [package.metadata.docs.rs]
 features = ["async_retry"]
